--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.0.2",
     "@nuxtjs/tailwindcss": "^5.0.1",
     "@picocss/pico": "^1.5.0",
     "nuxt3": "latest"
