--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "@nuxtjs/color-mode": "^3.0.2",
     "@nuxtjs/tailwindcss": "^5.0.1",
     "@picocss/pico": "^1.5.0",
-    "nuxt3": "latest"
+    "nuxt3": "^3.0.0-27478897.169aa35"
   }
 }
